syntax = "proto3";
package ink.pmc.common.exchange.proto.proxy2lobby;

message LobbyHealthReportAck {
  string service_id = 1;
  uint64 time = 2;
}