syntax = "proto3";
package ink.pmc.common.exchange.proto.server2lobby;

import "player/Player.proto";

message ExchangeStart {
  string service_id = 1;
  string server = 2;
  utils.proto.player.Player player = 3;
}