syntax = "proto3";
package ink.pmc.exchange.proto.proxy2server;

import "ExchangeStatus.proto";

message ExchangeCheckAck {
  string service_id = 1;
  ExchangeStatus status = 2;
}